<resources>
    <!--y esto?-->
    <string name="app_name">Aplicacion</string>

    <string name="txtName_text">Nombre</string>
    <string name="txtGPS_text">GPS</string>
    <string name="txtIMU_text">IMU</string>
    <string name="txtLogin_text">Login</string>

    <!--MENU-->
    <string name="itemVolver">Volver</string>
    <string name="itemEliminar">Eliminar</string>
    <string name="itemModificar">Modificar</string>

    <string name="itmTakePhoto_title">Capturar</string>
    <string name="itmExport_title">Exportar</string>
    <string name="itmGallery_title">Galeria</string>
    <string name="itmSettings_title">Configuración</string>
    <string name="itmClean_title">Borrar</string>
    <string name="itmHelp_title">Ayuda</string>
    <string name="itmAbout_title">Información</string>
    <string name="itmExit_title">Salir</string>
    <string name="itmLoclaizacion_title">Localización</string>

    <!--BOTONES-->
    <string name="btnLog_text">Log</string>
    <string name="btnAccept_text">Aceptar</string>

    <!--DEBUG-->
    <string name="btnStepOver_text">Step over</string>

    <!-- SGOLIVER -->
    <!--<string name="app_name">Localización Android</string>-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="posicion_actual">Posición Actual:</string>
    <string name="activar">Activar</string>
    <string name="desactivar">Desactivar</string>
    <string name="estado_proveedor">Estado proveedor:</string>

    <string name="campoBaseNombre">Base Nombre</string>
    <string name="campoBaseClave">Base Clave</string>
    <string name="campoNombre">Nombre</string>
    <string name="campoClave">Clave</string>
    <string name="campoFoto">Foto</string>
    <string name="botonCapturar">Capturar</string>
    <string name="botonProcesar">Procesar</string>
    <string name="botonBorrar">Borrar</string>
    <string name="botonAceptar">Aceptar</string>
    <string name="campoObtenerCapturar">Obtener imagen</string>
    <string name="campoConfirmar">Confirmar</string>
    <string name="campoCopiaSensor">Sensores</string>
    <string name="campoExportar">Exportar</string>
    <string name="campoBorrar">Borrar</string>
    <string name="campoLeer">Leer</string>
    <string name="tituloGPS">GPS</string>
    <string name="tituloCompas">Compas</string>
    <string name="tituloIMU">IMU</string>
    <string name="campoFinalizar">Finalizar</string>
    <string name="campoLatitud">Latitud</string>
    <string name="campoLongitud">Longitud</string>
    <string name="botonCopiar">Copiar</string>
    <string name="botonExportar">Exportar</string>
    <string name="botonLeer">Leer</string>

    <string name="campoComY">Compas YAW</string>
    <string name="campoComP">Compas PITCH</string>
    <string name="campoComR">Compas ROLL</string>

    <string name="campoGyroY">IMU YAW</string>
    <string name="campoGyroP">IMU PITCH</string>
    <string name="campoGyroR">IMU ROLL</string>

    <string name="campoAccX">IMU X</string>
    <string name="campoAccY">IMU Y</string>
    <string name="campoAccZ">IMU Z</string>

    <string name="msgAvisoBorradoo">Si eliminar los datos no podrán ser recuperados.</string>
</resources>
