<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Activity.Activity_Main">

    <item android:id="@+id/itmTakePhoto"
        android:title="@string/itmTakePhoto_title"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/itmExport"
        android:title="@string/itmExport_title"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/itmClean"
        android:title="@string/itmClean_title"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/itmSettings"
        android:title="@string/itmSettings_title"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/itmHelp"
        android:title="@string/itmHelp_title"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/itmAbout"
        android:title="@string/itmAbout_title"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/itmLocalizacion"
        android:title="@string/itmLoclaizacion_title"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/itmAcelerometro"
        android:title="Acelerometro"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/itmCompas"
        android:title="Compas"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/itmVisual"
        android:title="Compas"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>