<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.Activity_Clean">

    <LinearLayout style="@style/campos" >
        <!-- ********************************************************* -->
        <!-- * Formulario -->
        <!-- ********************************************************* -->
        <!-- aviso -->
        <LinearLayout style="@style/campo" >
            <TextView style="@style/campo" android:text="@string/msgAvisoBorradoo" />
        </LinearLayout>
        <!-- confirmar -->
        <LinearLayout style="@style/campo_comando" >
            <TextView style="@style/campo_comando_nombre" android:text="@string/campoConfirmar" />
            <CheckBox style="@style/comando_boton" android:id="@+id/viewForm_Confirmar" />
        </LinearLayout>
        <!-- capturar -->
        <LinearLayout style="@style/campo_comando" >
            <TextView style="@style/campo_comando_nombre" android:text="@string/campoBorrar" />
            <Button style="@style/comando_boton" android:text="@string/botonBorrar" android:id="@+id/viewForm_Borrar" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
